--- a/navbar.css
+++ b/navbar.css
@@ -273,6 +273,7 @@ body{
 
 
 .icon-btn .search-field{
+    z-index: 100;
     position: absolute;
     bottom: -85px;
     right: -20px;
@@ -281,7 +282,7 @@ body{
     display: flex;
     align-items: center;
     background-color: black;
-    padding: 3px;
+    padding: 0.5px;
     border-radius: 6px;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
     opacity: 0;
@@ -534,6 +535,14 @@ body{
 
 
 /* hero*/
+
+.container-bg{
+    width: 100%;
+    height: 200px;
+    background: url(img/bg.avif);
+    background-position:center;
+    background-size: cover;
+}
 .hero{
     min-height: 100vh;
     background-image: url(img/fiqur);
